--- a/bbb-home.html
+++ b/bbb-home.html
@@ -15,16 +15,16 @@
         <div class="container mt-3 text-dark">
             <ul class="nav justify-content-center text-muted">
                 <li class="nav-item text-muted">
-                    <a class="nav-link" href="javascript:void(0)">About Us</a>
+                    <a class="nav-link" href="about.html">About Us</a>
                 </li>
                 <li class="nav-item text-muted">
-                    <a class="nav-link" href="javascript:void(0)">Our Events</a>
+                    <a class="nav-link" href="events.html">Our Events</a>
                 </li>
                 <li class="nav-item text-muted">
                     <a class="nav-link" href="music.html">Our Music</a>
                 </li>
                 <li class="nav-item text-muted">
-                    <a class="nav-link" href="javascript:void(0)">Get in Touch</a>
+                    <a class="nav-link" href="contact.html">Get in Touch</a>
                 </li>
             </ul>
         </div>
