--- a/aboutus.html
+++ b/aboutus.html
@@ -55,7 +55,7 @@ $(document).ready(function(){
         
         <div class="container-fluid bckgrd"> 
            <h6 class="display-5">Frequently Asked Questions</h6>
-           <div class="display-6">
+           <div class="h2">
            <p>We are a 19 piece Big Band with over 10 years experience performing at events ranging from casual to black tie. From outdoor concerts to elegant dinner dances, fund raisers, weddings and anniversary parties -- we do it all! We are fun and stylish and truly everyone loves Swing and Big Band music! Outfitted in tuxes and ball gowns or more casual if the event calls for it -- no matter what, we will remind everyone of the elegant and awesome bands of the 1930's and 40's. Our repertoire includes many of your favorite jazz and Big Band standards, Latin rhythms, waltzes, R&B, as well as some exciting contemporary arrangements that you're sure to enjoy.</p>
             </div>
             <div class="row">
@@ -96,6 +96,7 @@ $(document).ready(function(){
                     <p>All of them! Seriously, we are experienced in all types of events and venues, so we have played at gala fundraisers, weddings, anniversary and company parties, community/town summer programs, indoor and outdoor venues and everything in between. We have done cool events in airport hangers and played at $500 a plate fundraisers, so we are as versatile as our music!</p>
                 </div><br>
             </div>
+          </div>
             <script>
                 var coll = document.getElementsByClassName("collapsible");
                 var i;
