--- a/aboutus.html
+++ b/aboutus.html
@@ -57,7 +57,9 @@ $(document).ready(function(){
            <div class="h2">
            <p>We are a 19 piece Big Band with over 10 years experience performing at events ranging from casual to black tie. From outdoor concerts to elegant dinner dances, fund raisers, weddings and anniversary parties -- we do it all! We are fun and stylish and truly everyone loves Swing and Big Band music! Outfitted in tuxes and ball gowns or more casual if the event calls for it -- no matter what, we will remind everyone of the elegant and awesome bands of the 1930's and 40's. Our repertoire includes many of your favorite jazz and Big Band standards, Latin rhythms, waltzes, R&B, as well as some exciting contemporary arrangements that you're sure to enjoy.</p>
             </div>
-            <div class="accordion container-fluid bckgrd" id="accordionExample">
+            
+<div class="accordion accordion-flush" id="accordionFlushExample">
+<div class="accordion container-fluid bckgrd" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
