--- a/aboutus.html
+++ b/aboutus.html
@@ -97,6 +97,7 @@ $(document).ready(function(){
                  </div><br>
              </div>
            </div>
+        </div>
               
                 
             <script>
