--- a/bbb-home.html
+++ b/bbb-home.html
@@ -11,9 +11,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Norican&family=Plus+Jakarta+Sans:ital,wght@0,600;1,400&display=swap" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
-    <body class="body">
-        <div class="container mt-3 text-dark">
-            <ul class="nav justify-content-center text-muted">
+   
+    <body class="body">                        
+        <div class="container-fluid mt-3 text-dark" role="navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <ul class="nav justify-content-end">
                 <li class="nav-item text-muted">
                     <a class="nav-link" href="about.html">About Us</a>
                 </li>
