--- a/bbb-home.html
+++ b/bbb-home.html
@@ -19,7 +19,7 @@
             </button>
             <ul class="nav justify-content-end">
                 <li class="nav-item text-muted">
-                    <a class="nav-link" href="about.html">About Us</a>
+                    <a class="nav-link" href="aboutus.html">About Us</a>
                 </li>
                 <li class="nav-item text-muted">
                     <a class="nav-link" href="events.html">Our Events</a>
