--- a/contactus.html
+++ b/contactus.html
@@ -35,7 +35,7 @@ $(document).ready(function(){
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item navbar-text">
-                            <a class="nav-link" href="about.html">About Us</a>
+                            <a class="nav-link" href="aboutus.html">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="events.html">Our Events</a>
@@ -44,7 +44,7 @@ $(document).ready(function(){
                             <a class="nav-link" href="music.html">Our Music</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Get in Touch</a>
+                            <a class="nav-link" href="contactus.html">Get in Touch</a>
                         </li>    
                     </ul>
                 </div>
