--- a/bbb-home.html
+++ b/bbb-home.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="music.html">Our Music</a>
                 </li>
                 <li class="nav-item text-muted">
-                    <a class="nav-link" href="contact.html">Get in Touch</a>
+                    <a class="nav-link" href="contactus.html">Get in Touch</a>
                 </li>
             </ul>
         </div>
