--- a/aboutus.html
+++ b/aboutus.html
@@ -44,7 +44,7 @@ $(document).ready(function(){
                             <a class="nav-link" href="music.html">Our Music</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contactus.html">Get in Touch</a>
+                            <a class="nav-link" href="contactus.html">Contact Us</a>
                         </li>    
                     </ul>
                 </div>
