--- a/aboutus.html
+++ b/aboutus.html
@@ -55,15 +55,16 @@ $(document).ready(function(){
                 <h1 class="display-1 text-center">About Us</h1>
         </div>
         <div class="container-fluid bckgrd"> 
-           <h6 class="display-5">Frequently Asked Questions</h6>
-           <h6 class="display-6">
-           <p>We are a 19 piece Big Band with over 10 years experience performing at events ranging from casual to black tie. From outdoor concerts to elegant dinner dances, fund raisers, weddings and anniversary parties -- we do it all! We are fun and stylish and truly everyone loves Swing and Big Band music! Outfitted in tuxes and ball gowns or more casual if the event calls for it -- no matter what, we will remind everyone of the elegant and awesome bands of the 1930's and 40's. Our repertoire includes many of your favorite jazz and Big Band standards, Latin rhythms, waltzes, R&B, as well as some exciting contemporary arrangements that you're sure to enjoy.</p>
-            </div></div>
-        
+            <div class="container-fluid bckgrd display-5 text-center">Frequently Asked Questions</div>
+            <div class="container-fluid bckgrd display-6 text-center">
+                <p>The Bedford Big Band is a 19-piece Big Band with over 10 years experience performing at events ranging from casual to black tie. 
+                    <p>From outdoor concerts to elegant dinner dances, fund raisers, weddings and anniversary parties, we do it all! We are fun and stylish, and truly everyone loves Swing and Big Band music! </p>
+                    </div>
         <div class="container-fluid bckgrd"> 
-            <div class="row">
+            <div class="row bckgrd">
                 <button class="collapsible">How many members are in the Bedford Big Band?</button>
                  <div class="content">
+                 </br>
                      <p>A. The band is a “real” big band with saxophone, trombone, trumpet and rhythm sections with 4-5 players in each section. Including our vocals and conductor, we are a 19 piece group.</p>
                  </div><br>
                  <button class="collapsible">How much space does the band need?</button>
