--- a/events.html
+++ b/events.html
@@ -54,12 +54,11 @@ $(document).ready(function(){
         <div id="div" class="container-fluid music-bckgrd  col-sm-12 col-md-12 col-lg-12 col-xl-12" style="margin-top:75px">
                 <h1 class="display-1 text-center">Our Events</h1>
         </div>
-        
-        <div class="container-fluid bckgrd"> 
 
+        <div class="container-fluid bckgrd ratio ratio-1x1">
  <!-- embed calendar from Zoho--> 
-
-            <iframe src="https://calendar.zoho.com/zc/ui/embed/#calendar=9120680ded0895f8735ae934b72a171486ea875026b6001359e8c7ad506ec1973cf5cf07e88a1ae73b4d58b8c532d250&title=Bedford%20Big%20Band%20&type=1&language=en&timezone=America%2FNew_York&showTitle=1&showTimezone=1&startingDayOfWeek=0&timeFormat=0&view=month&showDetail=0&theme=1&showAttendee=0&showSwitchingViews=0&eventColorType=light&showAllEvents=0"width=1000 height=1000 frameBorder="0" scrolling="no"></iframe>
+            <iframe style="padding:50px;" src="https://calendar.zoho.com/zc/ui/embed/#calendar=9120680ded0895f8735ae934b72a171486ea875026b6001359e8c7ad506ec1973cf5cf07e88a1ae73b4d58b8c532d250&title=Bedford%20Big%20Band%20&type=1&language=en&timezone=America%2FNew_York&showTitle=1&showTimezone=1&startingDayOfWeek=0&timeFormat=0&view=month&showDetail=0&theme=1&showAttendee=0&showSwitchingViews=0&eventColorType=light&showAllEvents=0"width=900 height=1000 frameBorder="0" scrolling="yes"></iframe>
+        </div>
 <!--Bootstrap footer taken from https://getbootstrap.com/docs/5.3/getting-started/download/-->
         <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
             <symbol id="bootstrap" viewBox="0 0 118 94">
@@ -93,7 +92,5 @@ $(document).ready(function(){
         </div>       
     </body>
 </html>
-Footer
-© 2023 GitHub, Inc.
-Footer navigation
+
 
