--- a/contactus.html
+++ b/contactus.html
@@ -72,7 +72,7 @@ $(document).ready(function(){
                     <div class="row">
                         <button class="collapsible">Join Bedford Big Band</button>
                         <div class="content">
-                            <p><a href="embedJoin.html">Play. Fill out this form to audition for a spot with us</a></p>
+                            <p><a href="embedJoin.html">Play: Fill out this form to audition for a spot with us</a></p>
                         </div><br>
                 
                 
