--- a/bbb-home.html
+++ b/bbb-home.html
@@ -19,16 +19,16 @@
             </button>
             <ul class="nav justify-content-end">
                 <li class="nav-item text-muted">
-                    <a class="nav-link" href="aboutus.html">About Us</a>
+                    <a class="nav-link" style="color:white;" href="aboutus.html">About Us</a>
                 </li>
                 <li class="nav-item text-muted">
-                    <a class="nav-link" href="events.html">Our Events</a>
+                    <a class="nav-link" style="color:white;" href="events.html">Our Events</a>
                 </li>
                 <li class="nav-item text-muted">
-                    <a class="nav-link" href="music.html">Our Music</a>
+                    <a class="nav-link" style="color:white;" href="music.html">Our Music</a>
                 </li>
                 <li class="nav-item text-muted">
-                    <a class="nav-link" href="contactus.html">Get in Touch</a>
+                    <a class="nav-link" style="color:white;" href="contactus.html">Get in Touch</a>
                 </li>
             </ul>
         </div>
