--- a/music.html
+++ b/music.html
@@ -35,16 +35,16 @@ $(document).ready(function(){
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item navbar-text">
-                            <a class="nav-link" href="aboutus.html">About Us</a>
+                            <a class="nav-link" style="color: white;" href="aboutus.html">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="events.html">Our Events</a>
+                            <a class="nav-link" style="color: white;" href="events.html">Our Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="music.html">Our Music</a>
+                            <a class="nav-link" style="color: white;" href="music.html">Our Music</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contactus.html">Get in Touch</a>
+                            <a class="nav-link" style="color: white;" href="contactus.html">Contact Us</a>
                         </li>    
                     </ul>
                 </div>
@@ -97,7 +97,7 @@ $(document).ready(function(){
             <footer class="d-flex justify-content-between align-items-center py-3 my-4 border-top">
                 <div class="col-md-4 d-flex align-items-center">
                     <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2023 Bedford Big Band, Inc.</span><br>
-                    <span class="mb-3 mb-md-0 text-body-secondary">Web Design by Marian Toledo Candelaria</span>
+                    <span class="mb-3 mb-md-0 text-body-secondary">Web Design by RB/DD/MTC (Designfit)</span>
                 </div>
                 
                 <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
